--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book</title>
-    <link rel="stylesheet" href="C:\Users\Miraaj Kadam\Desktop\turnJs_book\styles\style.css">   
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="C:\Users\Miraaj Kadam\Desktop\turnJs_book\styles\style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,300&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
 </head>
-<body>      
+
+<body>
 
     <div class="super">
         <div class="center">
@@ -25,12 +29,16 @@
 
                 <p>Fork on GitHub</p>
             </div>
-            
-            <div class="bookshelf"> 
+
+            <div class="bookshelf">
                 <div class="book">
                     <div id="flipbook">
-                        <div class="hard flipbook"><img src="https://lh6.googleusercontent.com/-bNYy7tOY6MI/UXaWB1MAV0I/AAAAAAAAEVc/XSKXLMM3P8I/s800/book-cover-01.jpg" alt=""></div>
-                        <div class="hard flipbook"><img src="https://lh6.googleusercontent.com/-bNYy7tOY6MI/UXaWB1MAV0I/AAAAAAAAEVc/XSKXLMM3P8I/s800/book-cover-01.jpg" alt=""></div>
+                        <div class="hard flipbook"><img
+                                src="https://lh6.googleusercontent.com/-bNYy7tOY6MI/UXaWB1MAV0I/AAAAAAAAEVc/XSKXLMM3P8I/s800/book-cover-01.jpg"
+                                alt=""></div>
+                        <div class="hard flipbook"><img
+                                src="https://lh6.googleusercontent.com/-bNYy7tOY6MI/UXaWB1MAV0I/AAAAAAAAEVc/XSKXLMM3P8I/s800/book-cover-01.jpg"
+                                alt=""></div>
                         <div class='flipbook page'><img src="http://18.224.23.171/images/magazine/p1.jpg" alt=""></div>
                         <div class='flipbook page'><img src="http://18.224.23.171/images/magazine/p2.jpg" alt=""></div>
                         <div class='flipbook page'><img src="http://18.224.23.171/images/magazine/p3.jpg" alt=""></div>
@@ -41,12 +49,16 @@
                         <div class='flipbook page'><img src="http://18.224.23.171/images/magazine/p8.jpg" alt=""></div>
                         <div class='flipbook page'><img src="http://18.224.23.171/images/magazine/p9.jpg" alt=""></div>
                         <div class='flipbook page'><img src="http://18.224.23.171/images/magazine/p10.jpg" alt=""></div>
-                        <div class="hard flipbook"><img src="https://lh6.googleusercontent.com/-bNYy7tOY6MI/UXaWB1MAV0I/AAAAAAAAEVc/XSKXLMM3P8I/s800/book-cover-01.jpg" alt=""></div>
-                        <div class="hard flipbook"><img src="https://lh6.googleusercontent.com/-bNYy7tOY6MI/UXaWB1MAV0I/AAAAAAAAEVc/XSKXLMM3P8I/s800/book-cover-01.jpg" alt=""></div>
+                        <div class="hard flipbook"><img
+                                src="https://lh6.googleusercontent.com/-bNYy7tOY6MI/UXaWB1MAV0I/AAAAAAAAEVc/XSKXLMM3P8I/s800/book-cover-01.jpg"
+                                alt=""></div>
+                        <div class="hard flipbook"><img
+                                src="https://lh6.googleusercontent.com/-bNYy7tOY6MI/UXaWB1MAV0I/AAAAAAAAEVc/XSKXLMM3P8I/s800/book-cover-01.jpg"
+                                alt=""></div>
                     </div>
-                </div>           
-            </div> 
-        </div>       
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="navigation container">
@@ -59,22 +71,27 @@
                 <li><a href="#about">About</a></li>
             </ul>
         </nav>
-    </div>      
-    
+    </div>
+
     <div class="container">
         <div>
-            <p class="headline"><strong>Turn.js</strong> is a JavaScript library that will make your content look like a real book or magazine using all the advantages of HTML5. The web is getting beautiful with new user interfaces based in HTML5; turn.js is the best fit for a magazine, book or catalog based in HTML5</p>            
+            <p class="headline"><strong>Turn.js</strong> is a JavaScript library that will make your content look like a
+                real book or magazine using all the advantages of HTML5. The web is getting beautiful with new user
+                interfaces based in HTML5; turn.js is the best fit for a magazine, book or catalog based in HTML5</p>
         </div>
-    </div>    
+    </div>
 
-    <script
-    src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+    </script>
     <script src="C:\Users\Miraaj Kadam\Desktop\turnJs_book\scripts\script.js"></script>
-    <script src="C:\Users\Miraaj Kadam\Desktop\turnJs_book\turnjs4\lib\turn.min.js"></script>    
+    <script src="C:\Users\Miraaj Kadam\Desktop\turnJs_book\turnjs4\lib\turn.min.js"></script>
 
 </body>
+
 </html>
